# ib_comm

./: .gitignore  Dockerfile  config.ini  docker-compose.yml  fetch_jr_emails.sh  fetch_oq_emails.sh  requirements-dev.txt  requirements.txt  setup.cfg  test_notifications.py
examples/: example.py  fetch_account_data.py
src/calendar_spread/: config.ini  earnings_calendar.py  earnings_calendar_copy.py  earnings_calendar_v2.py  earnings_calendar_v5.py  run_earnings_calendar.sh  run_earnings_calendar_v2.sh  trade_rec.py  trade_rec_v2.py  update_oquants_calendar.py
src/calendar_spread/data/raw/: 20250427.csv  20250428.csv  20250429.csv  20250430.csv  20250501.csv  20250502.csv
src/calendar_spread/data/reco/: reco20250428.csv  reco20250429.csv  reco20250430.csv  reco20250501.csv  reco20250502.csv
src/credentials/: keys.py
src/email/: gmail_reader.py
src/finnhub/: finnhub_client.py
src/ib_comm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ib_comm/client/: __init__py  account.py  base.py  market.py  web_client.py
src/ib_comm/database/: __init__.py  interface.py  postgres.py  sqlite.py
src/jungle_rock/: allocation_parser.py  config.ini  db_migration.py  email-reader-example.md  email_checker.sh  email_checker_copy.sh  list_folders.py  protonmail_reader.py  protonmail_reader_copy.py
src/notifications/: config.ini  gmail_emailer.py  notifier.py  send_email.py
webapp/: app.py
