[metadata]
name = ib_comm
version = 0.1.0
description = Interactive Brokers Communication Package
long_description = file: README.md
long_description_content_type = text/markdown
author = John Gambill
author_email = john.gambill@protonmail.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    ibapi>=9.81.1
    pandas>=1.5.3
    numpy>=1.24.3
    psycopg2-binary>=2.9.1

[options.packages.find]
where = src
